# itscm-c

./: .gitignore  README.md
ChainList/: CMakeLists.txt  data.c  data.h  dataList.c  dataList.h  dataNode.c  dataNode.h  main.c  stringTools.c  stringTools.h  userInput.c
CharArrays/: CMakeLists.txt  main.c
DynamicArrays/: CMakeLists.txt  main.c
Exam1/: CMakeLists.txt  main.c
FileHandling/: CMakeLists.txt  fileHandling.c  fileHandling.h  main.c
Lab1/: CMakeLists.txt  main.c  minMax.c  minMax.h  randomGenerator.h
Lab1Complete/: CMakeLists.txt  copyTab.c  copyTab.h  guess.c  main.c  minMax.c  order.c  order.h  randomGenerator.c  randomGenerator.h  schoolResults.c  tabSwitch.c  tabSwitch.h
Lab1Ex1/: CMakeLists.txt  main.c
Lab1Ex1C23/: CMakeLists.txt  main.c
Lab1Ex2/: CMakeLists.txt  main.c
Lab1WithExtra/: CMakeLists.txt  guess.h  minMax.h  schoolResults.h  tabSwitch.c
Lab2/: CMakeLists.txt  arrayTools.c  arrayTools.h  main.c  printTools.c  printTools.h  randomGenerator.c  randomGenerator.h
Lab3/: CMakeLists.txt  main.c  stringTools.c  stringTools.h
Lab4/: CMakeLists.txt  array.c  array.h  main.c  random.c  random.h
Lab5/: CMakeLists.txt  bitOperations.c  bitOperations.h  main.c
Lab6/: CMakeLists.txt  credentials.c  credentials.h  fileHandling.c  fileHandling.h  main.c  userInput.h
Lab7/: CMakeLists.txt  date.c  date.h  event.c  event.h  main.c  mathTools.c  mathTools.h  person.c  person.h  rectangle.c  rectangle.h  stringTools.c  stringTools.h  student.c  student.h  userInput.c  userInput.h
Lab7-2/: CMakeLists.txt  class.c  class.h  student.c  (+4 more)
(+15 files in other folders)
